--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "googleapis": "^38.0.0"
+    "express": "^4.16.4",
+    "googleapis": "^38.0.0",
   }
 }
